Fixed submodule definitions and vendored Vulkan library for clean clones
Added 5 missing submodule entries (SDL3, fmt, freeglut, json, yaml-cpp) to
.gitmodules, deleted stale Engine/.gitmodules, added .gitignore exception
for vulkan-1.lib, and updated README clone instructions to use --recursive.

--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,9 @@ bin/
 *.dylib
 *.dll
 
+# Exception: vendored Vulkan SDK libraries needed for build
+!Engine/vendors/VulkanSdk/Lib/vulkan-1.lib
+
 # Executables
 *.exe
 *.out
