--- a/Engine/CMakeLists.txt
+++ b/Engine/CMakeLists.txt
@@ -126,6 +126,8 @@ if(GLSLC)
     file(GLOB VULKAN_SHADERS
         "${SHADER_SOURCE_DIR}/default_shader.vert"
         "${SHADER_SOURCE_DIR}/default_shader.frag"
+        "${SHADER_SOURCE_DIR}/skybox.vert"
+        "${SHADER_SOURCE_DIR}/skybox.frag"
     )
 
     foreach(SHADER ${VULKAN_SHADERS})
